--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.13.0.0</h2>
+<ul>
+	<li>Added Rally mode and support for Richard Burns Rally</li>
+	<li>Added rudamentary pCars3 support</li>
+	<li>Added support for controller 'point of view' buttons (should allow direction-pads to be used for button assignments)</li>
+	<li>AMS2 - A few car class tweaks</li>
+	<li>ACC - added multi-class support</li>
+	<li>RF2 - updated plugin and added a pit menu manager</li>
+</ul>
 <h2>Version 4.12.0.8</h2>
 <ul>
 	<li>Corrected VR overlay default behaviour (should fix the remaining issues with the overlays)</li>
