--- a/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
+++ b/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
@@ -31,7 +31,7 @@
                 </font></b> </td>
           </tr>
           <tr>
-            <td width="70%" valign="top">Pitstop add [X liters]</td>
+            <td width="70%" valign="top">Pitstop add [X litres]</td>
             <td valign="top" align="center">X<br>
             </td>
             <td valign="top" align="center"><br>
@@ -68,6 +68,21 @@
             <td valign="top" align="center">X</td>
             <td width="10%" valign="top" align="center"><br>
             </td>
+          </tr>
+		  <tr>
+            <td width="70%" valign="top">Fuel to the end /
+              fuel to the end of the race</td>
+            <td valign="top" align="center"></td>
+            <td valign="top" align="center">X<br>
+            </td>
+            <td width="10%" valign="top" align="center"></td>
+          </tr>
+		  <tr>
+            <td width="70%" valign="top">Add fuel [X litres]</td>
+            <td valign="top" align="center"></td>
+            <td valign="top" align="center">X<br>
+            </td>
+            <td width="10%" valign="top" align="center"></td>
           </tr>
         </tbody>
       </table>
@@ -520,7 +535,7 @@
         </tbody>
       </table>
       <br>
-      <h4>R2E only<br>
+      <h4>R3E only<br>
       </h4>
       <p><font color="#009900"><font color="#000000">What are the pit
             actions / what's the pitstop plan</font><br>
