--- a/public/About_ChangeLog.html
+++ b/public/About_ChangeLog.html
@@ -232,8 +232,10 @@
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
       <h4>Version 4.13.0.0:</h4>
-      <p> &nbsp;&nbsp;* <font color="#ff0000"><b>rFactor 2 now needs
-            Vytautas LeonaviÄius' rFactor 2 Plugin version 3.7.14.2</b></font>&nbsp;
+      <p> &nbsp;&nbsp;* <font color="#ff0000"><b>
+    rFactor 2 now needs
+    Vytautas Leonavi&#x010D;ius' rFactor 2 Plugin version 3.7.14.2
+</b></font>&nbsp;
         It's part of this CC version and will be installed automatically
         but note that any other apps that use it will need to be updated<br>
         &nbsp;&nbsp;* rFactor 2 - added voice control of pit menu,
