--- a/public/About_ChangeLog.html
+++ b/public/About_ChangeLog.html
@@ -231,13 +231,29 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
+      <h4>Version 4.13.0.2<br>
+      </h4>
+      <p>* VR overlays: Fixed gazing. Added an option to change tracking
+        space for overlays (Seated/Standing/Follow Head); <br>
+        * Added an option to only use sounds which are gender-neutral.
+        The app has, historically, assumed all players are male so
+        contains lots of sounds with words like words like 'man', 'guy',
+        'he' etc which is a bit silly. If you enable the 'Block sounds
+        which refer to drivers as male' property the app will only use
+        sounds that are gender-neutral ('driver', 'car', etc). Note that
+        this requires the latest sound pack update to work;<br>
+        * RF2 - tweaked the behaviour of the pit manager system so it
+        only inspects the pit menu layout when it's first invoked,
+        rather than at the start of a session; Added an option to
+        disable the pit menu manager ('enable rF2 pit manager'
+        property); Fixed initialisation of pit menu manager<br>
+      </p>
       <h4>Version 4.13.0.0:</h4>
-      <p> &nbsp;&nbsp;* <font color="#ff0000"><b>
-    rFactor 2 now needs
-    Vytautas Leonavi&#x010D;ius' rFactor 2 Plugin version 3.7.14.2
-</b></font>&nbsp;
-        It's part of this CC version and will be installed automatically
-        but note that any other apps that use it will need to be updated<br>
+      <p> &nbsp;&nbsp;* <font color="#ff0000"><b> rFactor 2 now needs
+            Vytautas LeonaviÄius' rFactor 2 Plugin version 3.7.14.2
+          </b></font>&nbsp; It's part of this CC version and will be
+        installed automatically but note that any other apps that use it
+        will need to be updated<br>
         &nbsp;&nbsp;* rFactor 2 - added voice control of pit menu,
         similar to that for iRacing and R3E<br>
         &nbsp;&nbsp;* Added Rally mode and support for Richard Burns
@@ -907,6 +923,7 @@
       only). See the 'Advanced command macros' section of the help.txt
       file or
       http://thecrewchief.org/showthread.php?263-Command-key-press-macros&amp;p=2378&amp;viewfull=1#post2378
+
 
 
       for more info<br>
@@ -1953,6 +1970,7 @@
       folder with the new one in the app's install folder<br>
       &nbsp;&nbsp;* New plugin for RF2 - please replace your existing
       ...\Steam\steamapps\common\rFactor2\Bin64\Plugins\rFactor2SharedMemoryMapPlugin64.dll
+
 
 
       with the new one in the app's install folder<br>
