--- a/HelpFiles/About_ChangeLog.html
+++ b/HelpFiles/About_ChangeLog.html
@@ -15,17 +15,18 @@
       class="main">
       <h4>Version 4.13.0.2<br>
       </h4>
-      <p>* VR overlays: Fixed gazing. Added an option to change tracking
-        space for overlays (Seated/Standing/Follow Head); <br>
-        * Added an option to only use sounds which are gender-neutral.
-        The app has, historically, assumed all players are male so
-        contains lots of sounds with words like words like 'man', 'guy',
-        'he' etc which is a bit silly. If you enable the 'Block sounds
-        which refer to drivers as male' property the app will only use
-        sounds that are gender-neutral ('driver', 'car', etc). Note that
-        this requires the latest sound pack update to work;<br>
-        * RF2 - tweaked the behaviour of the pit manager system so it
-        only inspects the pit menu layout when it's first invoked,
+      <p>&nbsp;* VR overlays: Fixed gazing. Added an option to change
+        tracking space for overlays (Seated/Standing/Follow Head); <br>
+        &nbsp;* Added an option to only use sounds which are
+        gender-neutral. The app has, historically, assumed all players
+        are male so contains lots of sounds with words like words like
+        'man', 'guy', 'he' etc which is a bit silly. If you enable the
+        'Block sounds which refer to drivers as male' property the app
+        will only use sounds that are gender-neutral ('driver', 'car',
+        etc). Note that this requires the latest sound pack update to
+        work;<br>
+        &nbsp;* RF2 - tweaked the behaviour of the pit manager system so
+        it only inspects the pit menu layout when it's first invoked,
         rather than at the start of a session; Added an option to
         disable the pit menu manager ('enable rF2 pit manager'
         property); Fixed initialisation of pit menu manager<br>
@@ -706,6 +707,7 @@
       only). See the 'Advanced command macros' section of the help.txt
       file or
       http://thecrewchief.org/showthread.php?263-Command-key-press-macros&amp;p=2378&amp;viewfull=1#post2378
+
 
 
 
@@ -1753,6 +1755,7 @@
       folder with the new one in the app's install folder<br>
       &nbsp;&nbsp;* New plugin for RF2 - please replace your existing
       ...\Steam\steamapps\common\rFactor2\Bin64\Plugins\rFactor2SharedMemoryMapPlugin64.dll
+
 
 
 
