--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.14.0.1</h2>
+<ul>
+	<li>Added rally stage notes creation support - see https://mr_belowski.gitlab.io/CrewChiefV4/VoiceRecognition_RallyStageNotes.html</li>
+	<li>Added support for Dirt Rally and Dirt Rally 2 (user-created stage notes only); R3E - use correct field for player incident points</li>
+	<li>Added option to enable scroll bars on main window where necessary (enable with 'Scroll bars on main window' property)</li>
+	<li>R3E - use correct field for player incident points</li>
+</ul>
 <h2>Version 4.13.1.7</h2>
 <ul>
 	<li>Changed "watch" commands to be "monitor" ("monitor [opponent name / the car ahead / p12 / the leader / etc]" / stop monitoring [opponent name / etc] / stop monitoring all etc) - the word "watch" is too similar to "what's" so was being regularly mis-interpreted by the speech recogniser</li>
