--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -3,7 +3,7 @@
 <body>
 <h2>Version 4.14.0.2</h2>
 <ul>
-	<li>Added rally stage notes creation support - see https://mr_belowski.gitlab.io/CrewChiefV4/VoiceRecognition_RallyStageNotes.html</li>
+	<li>Added rally stage notes creation support - see <a href="https://mr_belowski.gitlab.io/CrewChiefV4/VoiceRecognition_RallyStageNotes.html">rally pace notes help page</a></li>
 	<li>Added support for Dirt Rally and Dirt Rally 2 (user-created stage notes only)</li>
 	<li>Added option to enable scroll bars on main window where necessary (enable with 'Scroll bars on main window' property)</li>
 	<li>R3E - use correct field for player incident points</li>
