--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.14.0.6</h2>
+<ul>
+	<li>Fixed 'force single class' option (was being ignored by the app)</li>
+	<li>Fix timing issue in multiclass races for some games</li>
+	<li>RBR / Dirt Rally / Dirty Rally2 - added 'Minimum rally distance pace note distance (metres)' property to set how far ahead the next pace note needs to be before the app inserts a distance call and 'Dynamic co-driver look ahead distance' property to shorten the look-ahead distance immediately after a slow corner (should reduce call overload into slow corners, disabled by default)</li>
+	<li>RBR / Dirt Rally / Dirty Rally2 - added a few more corner / obstacle types ('open hairpin left / right', 'go-straight', 'danger / triple caution' and 'trees / logs / rocks inside / outside') and more corner modifiers ('opens', 'very long' and 'plus / minus') to the rally speech recogniser</li>
+	<li>R3E - added "What's the strength of field?" and "What are my incident points?" voice commands</li>
+	<li>iRacing - fixed missing meatball flag message</li>
+	<li>AMS2 - updated car mappings for new classes</li>
+	<li>RF2 - added more tyre types to the pit menu</li>
+</ul>
 <h2>Version 4.14.0.3</h2>
 <ul>
 	<li>Changed 'My name' list behaviour - this UI component use to show the specially recorded 'personalisations' (about 1000 names) and all the opponent driver names in the app (about 10000 names), which made it unreliable for some users. By default it now hides the opponent driver names so you'll only see the 1000 specially recorded personalisations. Enabling the "Allow opponent names in 'My name' list" property will add all opponent driver names to this list allowing the app to generate a personalisation from any of the opponent names (see folder C:\Users\[user name]\AppData\Local\CrewChiefV4\sounds\driver_names). Note that these won't sound as natural as the specially recorded personalisations. If you've requested that your name be added to this list, please check again after updating as it might be shown</li>
