--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.15.0.1</h2>
+<ul>
+	<li>Added full support for GTR2, see <a href="http://thecrewchief.org/showthread.php?2012-GTR2-Setup-Instructions-and-Known-Issues&p=8180#post8180">forum post</a> for installation and setup instructions. Note that this also includes full (native) VR support for GTR2 (see the link for details)</li>
+	<li>R3E - added rating-based finishing position expectation messages and voice command ("what's my expected finish position?"). The rating data also affects the race-end messages</li>
+	<li>RBR / Dirt / Dirt2 - rally stage notes creation improvements - added "into", "and" and "then" items, added "tightens to [1/2/3/4/5/hairpin]" command, ensure pace notes are ordered correctly, some other fixes and improvements</li>
+	<li>iRacing - added sanity checks to opponent speed and position data, should reduce the number of spurious stopped-car calls</li>
+	<li>Various bug fixes</li>
+</ul>
 <h2>Version 4.14.0.6</h2>
 <ul>
 	<li>Fixed 'force single class' option (was being ignored by the app)</li>
